# serializer version: 1
# name: test_lox_file[bound_methods.lox]
  '''
  Jane
  ---
  Jane
  ---
  <instance Egotist>
  
  '''
# ---
# name: test_lox_file[break.lox]
  '''
  Break without new block, print to 3
  0
  1
  2
  3
  Break inside new block, print to 3
  0
  1
  2
  3
  Break inside deep nested block, print to 3
  0
  1
  2
  3
  
  '''
# ---
# name: test_lox_file[class_instantiation.lox]
  '''
  <instance Bagel>
  
  '''
# ---
# name: test_lox_file[classes.lox]
  '''
  Fields
  HI
  HELLO
  
  Basic Methods
  Heyyo
  
  Bound Methods
  HotDog
  <fn localFunction>
  HotDog
  Soup
  
  Initializers
  Pizza
  Hamburger
  
  '''
# ---
# name: test_lox_file[closure.lox]
  '''
  global
  global
  1
  2
  3
  
  '''
# ---
# name: test_lox_file[constructor.lox]
  '''
  Hello, Jane!
  Hello, John!
  true
  false
  always set
  
  '''
# ---
# name: test_lox_file[continue.lox]
  '''
  Test continue without new block, print to three except 2
  0
  1
  3
  Test continue in new block, print to three except 2
  0
  1
  3
  Test continue in nested block, print to three except 2
  0
  1
  3
  
  '''
# ---
# name: test_lox_file[for.lox]
  '''
  Testing regular for
  0
  1
  2
  Testing for without initializer and increment
  0
  1
  2
  
  '''
# ---
# name: test_lox_file[function.lox]
  '''
  Hi, Dear Reader!
  Hi, Hello WORLD!
  
  '''
# ---
# name: test_lox_file[if.lox]
  '''
  a is 5
  a is five in a block
  a is not not 5
  
  '''
# ---
# name: test_lox_file[increment.lox]
  '''
  15
  14
  140
  28
  0
  
  '''
# ---
# name: test_lox_file[inheritance.lox]
  '''
  A method
  
  '''
# ---
# name: test_lox_file[lambda.lox]
  '''
  4
  40
  
  '''
# ---
# name: test_lox_file[line_break.lox]
  '''
  [line 3] Error: Expect expression.
  [line 4] Error: Expect newline after expression.
  [line 9] Error: Expect ')' after arguments.
  [line 10] Error: Expect expression.
  [line 11] Error: Expect newline after expression.
  
  '''
# ---
# name: test_lox_file[logical.lox]
  '''
  hello world
  
  '''
# ---
# name: test_lox_file[methods.lox]
  '''
  Crunch crunch crunch!
  
  '''
# ---
# name: test_lox_file[modulo.lox]
  '''
  0
  100
  200
  300
  400
  500
  600
  700
  800
  900
  
  '''
# ---
# name: test_lox_file[print.lox]
  '''
  4
  seventy
  true
  nil
  1.2735891237598123e+26
  1.4142390424133547e+43
  2.3598123095812093e+17 1.509821305892131e+18
  159238512309.18237
  1214221016497.306 2358123095.1230597
  hello
  
  '''
# ---
# name: test_lox_file[properties.lox]
  '''
  10
  20
  30
  
  '''
# ---
# name: test_lox_file[recursion.lox]
  '''
  6765
  
  '''
# ---
# name: test_lox_file[scope.lox]
  '''
  inner a
  outer b
  global c
  outer a
  outer b
  global c
  global a
  global b
  global c
  
  '''
# ---
# name: test_lox_file[string_conversion.lox]
  '''
  3 25
  
  '''
# ---
# name: test_lox_file[strings.lox]
  '''
  hello
  world
  hello	world
  
  '''
# ---
# name: test_lox_file[this_binding.lox]
  '''
  The German chocolate cake is delicious!
  
  '''
# ---
# name: test_lox_file[while.lox]
  '''
  0
  1
  2
  3
  4
  5
  6
  7
  8
  9
  out of loop
  10
  
  '''
# ---
